--- a/A_sForm.ui
+++ b/A_sForm.ui
@@ -16,12 +16,6 @@
     <height>364</height>
    </size>
   </property>
-  <property name="maximumSize">
-   <size>
-    <width>470</width>
-    <height>364</height>
-   </size>
-  </property>
   <property name="palette">
    <palette>
     <active>
@@ -89,25 +83,21 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>451</width>
-     <height>271</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>photo.PNG</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>photo.PNG</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
